--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: center;
     div {
-        margin: 20px;
+        /* margin: 20px; */
         width: 80%;
         h3 {
             font-size: 2.5rem;
