--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -188,6 +188,7 @@
         width: 100%;
         background-image: url(../images/ilustracion_clase1.jpg);
         background-size: cover;
+        background-position: center;
     }
 }
 
@@ -254,14 +255,80 @@
     width: 100%;
    .imagen_precio {
         width: 30%;
-        height: 500px;
         background-image: url(../images/ilustracion_clase2.jpg);
         background-size: cover;
+        background-position: center;
    }
    .container_precios {
         width: 70%;
         background-image: url(../images/fondo.png);
         background-size: cover;
         color: $secondary_color;
+        padding: 70px;
+        h3 {
+            font-size: 2.5rem;
+            font-family: $secondary_font;
+            color: $secondary_color;
+        }
+        .cards_precios {
+            display: flex;
+            justify-content: space-between;
+            margin: 40px 0;
+            div {
+                background-color: $secondary_color;
+                border-radius: 20px;
+                color: $primary_color;
+                padding: 20px;
+                position: relative; 
+                width: 30%;  
+                text-align: center;
+                .background-peso {
+                    position: absolute;
+                    top: -30px;
+                    left: 5px;
+                    width: 25%;
+                    z-index: 0;
+                }
+                h4 {
+                    font-family: $secondary_font;
+                    text-align: center;
+                    z-index: 1;
+                }
+                hr {
+                    color: $tertiary_color;
+                    border-width: 1px;
+                    opacity: 1;
+                    z-index: 1;
+                } 
+                div {
+                    display: flex;
+                    justify-content: space-between;
+                    padding: 0;
+                    margin-bottom: 10px;
+                    width: 100%;
+                    p {
+                        font-size: 1.4rem;
+                        text-align: center;
+                        margin: 0;
+                        &:last-child {
+                            font-family: $secondary_font;
+                        }
+                    }
+                }
+            }
+            .paquetes {
+                p {
+                    font-size: 1.4rem;
+                    &:last-child {
+                        font-family: $secondary_font;
+                        margin: 0;  
+
+                    }
+                }
+            }
+        }
+        p {
+            font-size: 1.4rem;
+        }
    }
 }
