--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -120,6 +120,26 @@
             }
         }
     } 
+    #precios {
+        .imagen_precio {
+            width: 40%;
+            background-size: cover;
+        }
+        .container_precios {
+            width: 60%;
+            padding: 50px;
+            .cards_precios {
+                flex-direction: column;
+                div {
+                    width: 100%;
+                    margin-bottom: 10px;
+                    .background-peso {
+                        width: 20%;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 651px) {
@@ -228,4 +248,20 @@
             }
         }
     }  
+    #precios {
+        flex-direction: column;
+        .imagen_precio {
+            width: 100%;
+            height: 300px;
+        }
+        .container_precios {
+            width: 100%;
+            padding: 20px;
+            .cards_precios {
+                div {
+                    margin-bottom: 20px;
+                }
+            }
+        }
+    }
 }
