--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 
 /* Básicos */
-.hover:hover, #testimonios div .cards_testimonios div:hover, #sobrelasclases div .cards_sobrelasclases div:hover, header nav div div ul li a:hover, header nav div a img:hover, .botones:hover, .home div div a button:hover {
+.hover:hover, .whatsapp-logo:hover, #testimonios div .cards_testimonios div:hover, #sobrelasclases div .cards_sobrelasclases div:hover, header nav div div ul li a:hover, header nav div a img:hover, .botones:hover, .home div div a button:hover {
   filter: brightness(0.85);
   transform: scale(1.015);
 }
@@ -31,19 +31,19 @@
   text-decoration: none;
 }
 
-.secciones, #testimonios, #sobrelasclases {
+.secciones, #contacto, #testimonios, #sobrelasclases {
   display: flex;
   justify-content: center;
 }
-.secciones div, #testimonios div, #sobrelasclases div {
+.secciones div, #contacto div, #testimonios div, #sobrelasclases div {
   /* margin: 20px; */
   width: 80%;
 }
-.secciones div h3, #testimonios div h3, #sobrelasclases div h3 {
+.secciones div h3, #contacto div h3, #testimonios div h3, #sobrelasclases div h3 {
   font-size: 2.5rem;
   font-family: "corporative_bold";
 }
-.secciones div h3 span, #testimonios div h3 span, #sobrelasclases div h3 span {
+.secciones div h3 span, #contacto div h3 span, #testimonios div h3 span, #sobrelasclases div h3 span {
   font-size: 1.5rem;
   font-family: "corporative_bold";
 }
@@ -90,6 +90,10 @@
 }
 
 header {
+  position: fixed;
+  height: fit-content;
+  top: 0px;
+  z-index: 100;
   background-image: url(../images/fondo.png);
   background-size: cover;
 }
@@ -128,16 +132,20 @@ header nav div div ul li a {
 }
 
 .line_header {
+  /* position: fixed;
+  top: 120px; */
   color: #A405A7;
   width: 100%;
   border-width: 5px;
   opacity: 1;
   margin: 0;
   padding: 0;
+  z-index: 1000;
 }
 
 /* Principal */
 #principal {
+  padding-top: 120px;
   background-image: url(../images/fondo.png);
   background-size: cover;
   display: flex;
@@ -198,6 +206,9 @@ header nav div div ul li a {
 }
 
 /* Sobre las clases */
+#sobrelasclases {
+  padding-top: 120px;
+}
 #sobrelasclases div div {
   width: 100%;
   margin: 20px 0;
@@ -262,6 +273,7 @@ header nav div div ul li a {
 }
 
 #materias {
+  padding-top: 120px;
   display: flex;
   width: 100%;
 }
@@ -322,6 +334,9 @@ header nav div div ul li a {
 }
 
 /* Testimonios */
+#testimonios {
+  padding-top: 120px;
+}
 #testimonios div div {
   width: 100%;
   margin: 20px 0;
@@ -372,6 +387,7 @@ header nav div div ul li a {
 
 /* Precios */
 #precios {
+  padding-top: 120px;
   display: flex;
   width: 100%;
 }
@@ -451,12 +467,82 @@ header nav div div ul li a {
   font-size: 1.4rem;
 }
 
+/* Contacto */
+#contacto {
+  padding-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#contacto div .card_contacto {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 50px 0;
+  padding: 40px;
+  background-image: url(../images/fondo.png);
+  background-size: 100%;
+  border-radius: 20px;
+  color: #FFFFFF;
+}
+#contacto div .card_contacto p {
+  font-size: 1.4rem;
+  margin-bottom: 50px;
+}
+#contacto div .card_contacto p span {
+  font-family: "corporative_bold";
+  text-decoration: underline #A405A7;
+}
+#contacto div .card_contacto a {
+  text-decoration: none;
+  color: #FFFFFF;
+  font-size: 1.3rem;
+  width: 30%;
+}
+#contacto hr {
+  color: #A405A7;
+  width: 100%;
+  border-width: 5px;
+  opacity: 1;
+  margin: 0;
+  padding: 0;
+}
+#contacto .irarriba {
+  text-decoration: none;
+  color: #FFFFFF;
+  font-size: 1.3rem;
+  width: 5%;
+  position: relative;
+  top: -25px;
+}
+#contacto .irarriba svg {
+  width: 30px;
+}
+
+/* Whatsapp */
+.whatsapp-logo {
+  position: fixed;
+  bottom: 20px; /* Ajusta según el espacio que quieras desde el borde inferior */
+  right: 20px; /* Ajusta según el espacio que quieras desde el borde derecho */
+  z-index: 100; /* Asegura que esté por encima de otros elementos */
+  cursor: pointer;
+}
+.whatsapp-logo img {
+  width: 100px;
+  height: 100px;
+}
+
 @media screen and (max-width: 1045px) {
   #principal .imagen_principal img {
     width: 90%;
   }
 }
 @media screen and (max-width: 991px) {
+  header {
+    height: fit-content;
+  }
   header nav div a {
     width: 30%;
   }
@@ -472,7 +558,7 @@ header nav div div ul li a {
   .home div div a button span {
     font-size: 1.5rem;
   }
-  .secciones div, #sobrelasclases div, #testimonios div {
+  .secciones div, #sobrelasclases div, #testimonios div, #contacto div {
     width: 90%;
     margin: 0;
     /* margin-top: 20px; */
@@ -541,9 +627,12 @@ header nav div div ul li a {
   #precios .container_precios .cards_precios div .background-peso {
     width: 20%;
   }
+  #contacto div div .botones, #contacto .home div div a button, .home #contacto div div a button {
+    width: 50%;
+  }
 }
 @media screen and (max-width: 651px) {
-  .secciones div, #sobrelasclases div, #testimonios div {
+  .secciones div, #sobrelasclases div, #testimonios div, #contacto div {
     width: 90%;
     margin: 0;
     margin-top: 20px;
@@ -642,6 +731,12 @@ header nav div div ul li a {
   }
   #precios .container_precios .cards_precios div {
     margin-bottom: 20px;
+  }
+  #contacto div div .botones, #contacto .home div div a button, .home #contacto div div a button {
+    width: 80%;
+  }
+  #contacto .irarriba {
+    width: 20%;
   }
 }
 
