--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -396,6 +396,48 @@
     }
 }
 
+/* Footer */
+
+footer {
+    @extend .secciones;
+    display: flex;
+    justify-content: center;
+    .cards_redes {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 40px 0;
+        a {        
+            width: 30%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-decoration: none;
+            background-image: url(../images/fondo.png);
+            background-size: 200%;
+            border-radius: 20px ;
+            color: $secondary_color;
+            padding: 20px;
+            div {
+                div {
+                    h4 {
+                        font-weight: 200;
+                        font-size: 2rem;
+                        font-family: $secondary_font;
+                    }
+                }
+                svg {
+                    width: 50px;
+                    color: $tertiary_color;
+                    margin-bottom: 20px;
+                }
+            }
+            @extend .hover;
+        }
+    }
+}
+
+
 
 /* Whatsapp */
 
