--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ header nav div div ul li a {
   left: -20px;
   top: 30px; /* Ajusta la posición de la línea */
   width: 2px;
-  height: 60px; /* Ajusta la longitud de la línea */
+  height: 100px; /* Ajusta la longitud de la línea */
   background-color: #A405A7; /* Cambia el color de la línea */
 }
 #materias .imagen_clases {
@@ -572,8 +572,11 @@ footer .cards_redes a div svg {
   #principal .imagen_principal img {
     width: 90%;
   }
+  #materias div .custom-list li:not(:last-child)::after {
+    height: 100px;
+  }
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 899px) {
   header {
     height: fit-content;
   }
@@ -638,7 +641,7 @@ footer .cards_redes a div svg {
     margin: 20px 0px;
   }
   #materias div .custom-list li:not(:last-child)::after {
-    height: 100px;
+    height: 145px;
   }
   #testimonios div .cards_testimonios div .background-comillas {
     top: -35px;
@@ -739,6 +742,9 @@ footer .cards_redes a div svg {
   }
   #materias div {
     padding: 40px;
+  }
+  #materias div .custom-list li:not(:last-child)::after {
+    height: 145px;
   }
   #materias .imagen_clases {
     height: 300px;
