--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -6,9 +6,20 @@
             }
         }
     }
+    #materias {
+        div {
+            .custom-list {
+                li {
+                    &:not(:last-child)::after {
+                        height: 100px;
+                    }
+                }
+            }
+        } 
+    }
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 899px) {
     header {
         height: fit-content;
         nav{
@@ -104,7 +115,7 @@
             .custom-list {
                 li {
                     &:not(:last-child)::after {
-                        height: 100px;
+                        height: 145px;
                     }
                 }
             }
@@ -238,6 +249,13 @@
         flex-direction: column;
         div {
             padding: 40px;
+            .custom-list {
+                li {
+                    &:not(:last-child)::after {
+                        height: 145px;
+                    }
+                }
+            }
         }
         .imagen_clases {
             height: 300px;
